# NaiveBayes

./: CMakeLists.txt
data/: mytestimages
src/: Classifying.cpp  Classifying.h  Model.cpp  Model.h  Number.cpp  Number.h  Training.cpp  Training.h  main.cpp
test/: Test.cpp  TestingData.cpp  TestingData.h
